feat: deactivate team
