# openapi.yml
@@ -199,6 +199,44 @@ paths:
             application/json:
               schema: { $ref: '#/components/schemas/ErrorResponse' }
 
+  /team/deactivate:
+    post:
+      tags: [Teams]
+      summary: Деактивировать всех пользователей команды
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [ team_name ]
+              properties:
+                team_name: { type: string }
+            example:
+              team_name: backend
+      responses:
+        '200':
+          description: Команда деактивирована
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Team'
+              example:
+                team_name: backend
+                members:
+                  - user_id: u1
+                    username: Alice
+                    is_active: false
+                  - user_id: u2
+                    username: Bob
+                    is_active: false
+        '404':
+          description: Команда не найдена
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/ErrorResponse' }
+
+
   /team/stats:
     get:
       tags: [Teams]
